--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 <h1>Math Codes</h1>
 <p>Start</p>
 
-<div data-pym-src='https://www.jdoodle.com/plugin' data-language="python3"
+<!-- <div data-pym-src='https://www.jdoodle.com/plugin' data-language="python3"
     data-version-index="4" data-libs="mavenlib1, mavenlib2">
     Optional default code goes here
   </div>
+-->
 
 </body>
 <script src="https://www.jdoodle.com/assets/jdoodle-pym.min.js" type="text/javascript"></script>
