--- a/bisection.html
+++ b/bisection.html
@@ -16,17 +16,10 @@
 </head>
 <body>
 
-<h1>Math Codes</h1>
-<p>Start</p>
+<h1>Bisection Method</h1>
 
-<link href="./bisection.html">
 
-<!-- <div data-pym-src='https://www.jdoodle.com/plugin' data-language="python3"
-    data-version-index="4" data-libs="mavenlib1, mavenlib2">
-    Optional default code goes here
-  </div>
--->
+
 
 </body>
-<script src="https://www.jdoodle.com/assets/jdoodle-pym.min.js" type="text/javascript"></script>
 </html>
