--- a/index.html
+++ b/index.html
@@ -16,10 +16,21 @@
 </head>
 <body>
 
-<h1>Math Codes</h1>
-<p>Start</p>
+<h1>Welcome to Math Codes</h1>
+<p>We got the 
 
-<link href="./bisection.html">
+  <li>
+    <item> <a href="http://pages.mathcodes.org/app/bisection/">Bisectional Method </a></item>
+    <item> <a href="http://pages.mathcodes.org/app/range-kutta/">Range-Kutta Method </a></item>
+  </li>
+
+
+</p>
+
+<p>
+  Or learn some <a href=http://pages.mathcodes.org/app/calculus/">Calculus</a>, <a href=http://pages.mathcodes.org/app/FirstOrderODE/">Differential equations</a>
+</p>
+
 
 <!-- <div data-pym-src='https://www.jdoodle.com/plugin' data-language="python3"
     data-version-index="4" data-libs="mavenlib1, mavenlib2">
